templates/eventgate_template.yaml
---
# Source: eventgate/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eventgate-release-name
  labels:
    app: eventgate
    chart: eventgate-0.12.4
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: eventgate
      release: release-name
      routed_via: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8192
          protocol: TCP
        - port: 9102
          protocol: TCP
---
# Source: eventgate/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventgate-release-name-http-service
  labels:
    app: eventgate
    chart: eventgate-0.12.4
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: eventgate
    routed_via: release-name
  ports:
  - name: eventgate-http
    protocol: TCP
    port: 8192
---
# Source: eventgate/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventgate-release-name
  labels:
    app: eventgate
    chart: eventgate-0.12.4
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: eventgate
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: eventgate
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: e093093488db1b0cac4bd1c1455ee3b5834a9ae354b6e3bebf3bbe5d429f2949
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      terminationGracePeriodSeconds: 13
      containers:
        # The main application container
        - name: eventgate
          image: "docker-registry.wikimedia.org/wikimedia/eventgate-wikimedia:latest"
          command: ["nodejs"]
          args: [
            "/srv/service/node_modules/.bin/eventgate",
            "-c",
            "/etc/eventgate/config.yaml"
          ]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8192
          livenessProbe:
            tcpSocket:
              port: 8192
          readinessProbe:
            # EventGate should process a test event if it is ready.
            # The GET /v1/_test/events route will process the configured
            # test_events as if they were POSTed to /v1/events.
            httpGet:
              path: /v1/_test/events
              port: 8192
            initialDelaySeconds: 2
          lifecycle:
            preStop:
              exec:
                command:
                - "/bin/sh"
                - "-c"
                - "sleep 11"
          volumeMounts:
            - name: eventgate-config-volume
              mountPath: /etc/eventgate
          resources:
            requests:
              cpu: 200m
              memory: 150Mi
            limits:
              cpu: 1500m
              memory: 300Mi          
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
               drop:
               - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault        
      volumes:
        - name: eventgate-config-volume
          configMap:
            name: eventgate-release-name-config
        - name: metrics-exporter-config-volume
          configMap:
            name: eventgate-release-name-metrics-exporter-config
---
# Source: eventgate/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'eventgate-release-name-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
  - name: 'eventgate-release-name-service-checker'
    image: "docker-registry.wikimedia.org/service-checker"
    imagePullPolicy: IfNotPresent
    args: ["-t", "5", '$(EVENTGATE_RELEASE_NAME_SERVICE_HOST)', 'http://eventgate-release-name:8192']    
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
         drop:
         - ALL
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
  dnsPolicy: ClusterFirst
  restartPolicy: Never
